# face-recon

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
deploy/: README.md  decision-service.Dockerfile  docker-compose.yml  inference-blackwell.Dockerfile
deploy/grafana/dashboards/: face-recon.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/prometheus/: prometheus.yml
enrolment/: README.md
src/face_recon/: __init__.py  __main__.py
src/face_recon/api/: app.py  routes.py
src/face_recon/core/: config.py  logging.py  metrics.py  models.py
src/face_recon/enrolment/: enrol.py
src/face_recon/pipeline/: challenges.py  debug.py  faces.py  liveness.py  orchestrator.py  pose.py  state_machine.py
src/face_recon/services/: face_embed.py  inference.py  landmarks.py  stream.py  webhook.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_challenges.py  test_config.py  test_debug.py  test_faces.py  test_geometry.py  test_landmarks.py  test_liveness.py  test_models.py  test_orchestrator.py  test_pose.py  test_state_machine.py  test_state_machine_armswitch.py  test_webhook.py
