[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "face-recon"
version = "0.1.0"
description = "A presence-aware alarm box: recognises a known person on a camera stream with active liveness checks, and emits webhooks for recognised / stranger / alarm events."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "prometheus-client>=0.20",
  "numpy>=1.26",
  "httpx>=0.27",
  "pillow>=10.0",
]

[project.optional-dependencies]
# Heavy CV stack, only needed to actually run the pipeline against the camera.
cv = [
  "supervision>=0.20",
  "inference-sdk>=0.9",
  "opencv-python-headless>=4.9",
  "mediapipe>=0.10",
  # Face detection + ArcFace identity embedding (enrolment and the live "is this me" step).
  # On the GPU host pair with onnxruntime-gpu (the Blackwell build) for GPU inference.
  "insightface>=0.7",
  "onnxruntime>=1.17",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/face_recon"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
